@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - additional option 'header'
 
 0.2.4  2014-10-23 00:17:08 CEST
     - fixed undefined $_ in simple.t test (Patrick Hochstenbach)
